force-app/main/default/objects/KPI_Define_Managment__c/KPI_Define_Managment__c.object-meta.xml
<CustomObject>
    <label>KPI Define Managment</label>
    <nameField>
        <displayFormat>KDM-{0000}</displayFormat>
        <label>KPI Define Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Define Managment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>