force-app/main/default/objects/KPI_Define_Managment__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KPI Define Managment</relationshipLabel>
    <relationshipName>KPI_Define_Managment</relationshipName>
    <type>Lookup</type>
</CustomField>