force-app/main/default/objects/KPI_Define_Managment__c/fields/KPI_Category_Management__c.field-meta.xml
<CustomField>
    <fullName>KPI_Category_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Category Management</label>
    <referenceTo>KPI_Category_Management__c</referenceTo>
    <relationshipLabel>KPI Define Managment</relationshipLabel>
    <relationshipName>KPI_Define_Managment</relationshipName>
    <type>Lookup</type>
</CustomField>